--- a/index.html
+++ b/index.html
@@ -1,10 +1,100 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
-    <title>Sorteio Automático</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfólio de Luciano Galvão</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+        main {
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        section {
+            margin-bottom: 40px;
+        }
+        .projects {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+        .project-card {
+            background-color: white;
+            border-radius: 5px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            width: 300px;
+        }
+        .project-card h3 {
+            margin: 0 0 10px;
+        }
+        .project-card p {
+            margin: 0 0 10px;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #333;
+            color: white;
+        }
+        a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-    <h1>Essa é nossa página de sorteio</h1>
-    <p>Agora os nossos sorteios vão ficar automáticos!</p>
+
+    <header>
+        <h1>Luciano Galvão - Portfólio</h1>
+    </header>
+
+    <main>
+        <section id="about">
+            <h2>Sobre mim</h2>
+            <p>Sou especialista em SQL Server, análise de dados e engenharia de dados com experiência em diversos projetos de cloud e dados. Este portfólio exibe alguns dos meus projetos e contribuições para a comunidade.</p>
+        </section>
+
+        <section id="projects">
+            <h2>Meus Projetos</h2>
+            <div class="projects">
+                <div class="project-card">
+                    <h3>Projeto 1</h3>
+                    <p>Descrição breve do projeto 1.</p>
+                </div>
+                <div class="project-card">
+                    <h3>Projeto 2</h3>
+                    <p>Descrição breve do projeto 2.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact">
+            <h2>Contato</h2>
+            <p>Se você deseja entrar em contato, pode me encontrar no GitHub.</p>
+            <p><a href="https://github.com/lvgalvao" target="_blank">Meu GitHub</a></p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Luciano Galvão - Todos os direitos reservados</p>
+    </footer>
+
 </body>
 </html>
