--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             };
 
             fetch("https://itg8pcw893.execute-api.ap-south-1.amazonaws.com/prod/", requestOptions)
-            .then(response => response.text())
+            .then(response => response.json())
             .then(result => alert("Número sorteado: " + JSON.parse(result).numeroSorteado))
             .catch(error => console.log('error', error));
         }
