--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             };
 
             fetch("https://itg8pcw893.execute-api.ap-south-1.amazonaws.com/prod/", requestOptions)
-            .then(response => response.body())
-            .then(result => alert("Número sorteado: " + JSON.parse(result).numeroSorteado))
+            .then(response => response.text())
+            .then(result => alert("Número sorteado: " + JSON.parse(JSON.parse(result).body).numeroSorteado))
             .catch(error => console.log('error', error));
         }
     </script>
